added front page

--- a/new-tab-page/src/manifest.json
+++ b/new-tab-page/src/manifest.json
@@ -4,7 +4,7 @@
     "newtab": "tab/tab.html"
   },
   "description": "A Vue.js web extension",
-  "version": null,
+  "version": "1.0.0",
   "manifest_version": 2,
   "icons": {
     "48": "icons/icon_48.png",
