--- a/new-tab-page/src/manifest.json
+++ b/new-tab-page/src/manifest.json
@@ -1,10 +1,10 @@
 {
-  "name": "new-tab-page",
+  "name": "ani wallpaper generator",
   "chrome_url_overrides": {
     "newtab": "tab/tab.html"
   },
-  "description": "A Vue.js web extension",
-  "version": "1.0.0",
+  "description": "An anime wallpaper generator with a added bonus of tracking airing dates for current anime",
+  "version": "0.0.1",
   "manifest_version": 2,
   "icons": {
     "48": "icons/icon_48.png",
